--- a/index.html
+++ b/index.html
@@ -514,6 +514,73 @@
             50% { opacity: 1; }
         }
 
+        .photo-gallery {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
+            gap: 15px;
+            margin-top: 20px;
+        }
+
+        .photo-gallery img {
+            width: 100%;
+            height: 180px;
+            object-fit: cover;
+            border-radius: 8px;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+            cursor: pointer;
+        }
+
+        .photo-gallery img:hover {
+            transform: scale(1.03);
+            box-shadow: 0 6px 20px rgba(0, 0, 0, 0.5);
+        }
+
+        .image-lightbox-overlay {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.9);
+            display: none;
+            align-items: center;
+            justify-content: center;
+            z-index: 1500;
+        }
+
+        .image-lightbox-overlay.active {
+            display: flex;
+        }
+
+        .image-lightbox-content {
+            position: relative;
+            max-width: min(90vw, 1100px);
+            max-height: 90vh;
+        }
+
+        .image-lightbox-content img {
+            max-width: 100%;
+            max-height: 90vh;
+            width: auto;
+            height: auto;
+            object-fit: contain;
+            border-radius: 10px;
+            box-shadow: 0 0 40px rgba(168, 218, 220, 0.8);
+        }
+
+        .image-lightbox-close {
+            position: absolute;
+            top: -30px;
+            right: -10px;
+            font-family: 'Press Start 2P', cursive;
+            font-size: 1.5em;
+            color: #ffffff;
+            background: none;
+            border: none;
+            cursor: pointer;
+        }
+
         @media (max-width: 768px) {
             .planet-label {
                 font-size: 0.6em;
@@ -522,6 +589,14 @@
             .modal {
                 padding: 30px 20px;
                 max-width: 90%;
+            }
+
+            .photo-gallery {
+                grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
+            }
+
+            .photo-gallery img {
+                height: 160px;
             }
         }
     </style>
@@ -806,7 +881,22 @@
         <h2>🛰️ You heard about Pluto?</h2>
         <p style="font-size: 1.3em; color: #a8dadc;">Congratulations, space explorer! Thanks for making it all the way out here :)</p>
         <p>Here's some pictures I've taken I want to showcase. Thanks for visiting!</p>
+        <div class="photo-gallery">
+            <img src="files/photos/DSCF0915.JPG" alt="Photo 1" onclick="openImageLightbox(this.src)">
+            <img src="files/photos/DSCF1096.JPG" alt="Photo 2" onclick="openImageLightbox(this.src)">
+            <img src="files/photos/DSCF1138.JPG" alt="Photo 3" onclick="openImageLightbox(this.src)">
+            <img src="files/photos/DSCF1224.JPG" alt="Photo 4" onclick="openImageLightbox(this.src)">
+            <img src="files/photos/DSCF1841.JPG" alt="Photo 5" onclick="openImageLightbox(this.src)">
+            <img src="files/photos/DSCF3024.JPG" alt="Photo 6" onclick="openImageLightbox(this.src)">
+            <img src="files/photos/DSCF3226.JPG" alt="Photo 7" onclick="openImageLightbox(this.src)">
+        </div>
+    </div>
 
+    <div id="image-lightbox" class="image-lightbox-overlay" onclick="closeImageLightbox()">
+        <div class="image-lightbox-content" onclick="event.stopPropagation()">
+            <button class="image-lightbox-close" onclick="closeImageLightbox()">×</button>
+            <img id="image-lightbox-img" src="" alt="Expanded photo">
+        </div>
     </div>
 
     <script>
@@ -875,6 +965,9 @@
             } else if (e.key === 'ArrowLeft' && currentPlanetIndex > 0) {
                 currentPlanetIndex--;
                 smoothScrollTo(planetPositions[planetOrder[currentPlanetIndex]]);
+            } else if (e.key === 'Escape') {
+                closeImageLightbox();
+                closeModal();
             }
         });
 
@@ -957,6 +1050,20 @@
                 modal.classList.remove('active');
             });
             document.querySelector('.modal-overlay').classList.remove('active');
+        }
+
+        function openImageLightbox(src) {
+            const overlay = document.getElementById('image-lightbox');
+            const img = document.getElementById('image-lightbox-img');
+            img.src = src;
+            overlay.classList.add('active');
+        }
+
+        function closeImageLightbox() {
+            const overlay = document.getElementById('image-lightbox');
+            const img = document.getElementById('image-lightbox-img');
+            overlay.classList.remove('active');
+            img.src = '';
         }
 
         // Hide instructions after 5 seconds
